Minor code change

--- a/HCD-1-E2-Form/index.html
+++ b/HCD-1-E2-Form/index.html
@@ -20,7 +20,7 @@
 		</style>
 		<main>
 			<div>
-				<audio src="piano.mp3" autoplay loop controls></audio>
+				<audio src="piano.mp3" type="audio/mpeg" autoplay loop controls></audio>
 			</div>
 		</main>
 		<form>
